CI: fix GHCR image name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ permissions:
   packages: write
 
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/pricewise-api
+  IMAGE_NAME: ghcr.io/jeskrill/pricewise-api
 
 jobs:
   build:
