--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,14 +20,14 @@ jobs:
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: jeskrill
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/build-push-action@v5
         with:
           context: .
           file: backend/Dockerfile
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
+          tags: ghcr.io/jeskrill/pricewise-api:latest
 
   deploy:
     needs: build
@@ -41,6 +41,6 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             cd /opt/pricewise
-            docker login ghcr.io -u ${{ secrets.GHCR_USER }} -p ${{ secrets.GHCR_TOKEN }}
+            docker login ghcr.io -u jeskrill -p ${{ secrets.GHCR_TOKEN }}
             docker compose pull
             docker compose up -d --remove-orphans
